PLANET-4949 Implement Photoswipe as a lightbox for images and galleries.
This commit rebases:

Add a custom thin wrapper for Photoswipe.
Integrate the Lightbox into the Gallery styles.
Fixed a small bug with obtaining the current index
Dont turn images into a gallery in the lightbox (single-image mode)
Move Lightbox into GalleryFrontend
Encapsulate Lightbox related state in a custom hook
Remove impossible condition. Add early return for isOpen
Add a selector to be able to deactivate the lightbox on demand
Add missing captions. Add noop default and remove unused call.
Add pointer cursor to gallery images
Clarifying Photoswipe file names and sources. Add cursor: pointer to image blocks.
Remove unnecesary return statement
Move non-critical CSS to a deferred stylesheet loader
Add lightbox to Three-Columns Gallery and legacy images
Ensure all galleries and images show Pointer cursors.

--- a/assets/src/styles/blocks/Gallery_carousel.scss
+++ b/assets/src/styles/blocks/Gallery_carousel.scss
@@ -57,6 +57,7 @@
     img {
       width: 100%;
       object-fit: cover;
+      cursor: pointer;
 
       @include mobile-only {
         height: 200px;
@@ -184,6 +185,7 @@
     top: 0;
     width: 30%;
     z-index: 3;
+    cursor: pointer;
 
     @include mobile-only {
       .carousel-control-prev-icon,
