--- a/assets/src/styles/blocks/Gallery_content_three_column.scss
+++ b/assets/src/styles/blocks/Gallery_content_three_column.scss
@@ -26,6 +26,7 @@
       left: -35%;
       max-width: inherit;
       object-fit: cover;
+      cursor: pointer;
 
       @include mobile-only {
         width: 200px;
