--- a/assets/src/styles/blocks/Gallery_grid.scss
+++ b/assets/src/styles/blocks/Gallery_grid.scss
@@ -11,6 +11,7 @@
     .grid-item {
       display: inline-block;
       padding: 12px;
+      cursor: pointer;
 
       img {
         @supports (object-fit: cover) {
