--- a/src/components/_buttons.scss
+++ b/src/components/_buttons.scss
@@ -15,10 +15,9 @@
   display: inline-block;
   position: relative;
   font-family: $roboto;
-  font-size: 1rem;
+  font-size: $font-size-sm;
   text-align: center;
   text-decoration: none;
-  text-transform: capitalize;
   color: $white;
   font-weight: bold;
   border-radius: 4px;
@@ -30,6 +29,7 @@
   transition-property: color, background-color, border-color;
   transition-duration: 150ms;
   transition-timing-function: linear;
+  text-transform: capitalize;
 
   &:hover,
   &:focus,
@@ -42,6 +42,11 @@
   &:disabled {
     opacity: .5;
   }
+}
+
+.btn.text-transform-none,
+.wp-block-button.text-transform-none a {
+  text-transform: none;
 }
 
 .btn-small {
@@ -86,7 +91,6 @@
   border-color: $dark-blue;
   color: $dark-blue;
   box-shadow: none;
-  font-size: $font-size-xxs;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -95,7 +99,6 @@
   padding: 2px $n30;
 
   html[dir="rtl"] & {
-    font-size: $font-size-sm;
     line-height: 2.5;
   }
 
@@ -165,7 +168,6 @@
 .wp-block-button.is-style-donate a {
   background-color: var(--btn-donate-background-color, $aquamarine);
   color: var(--btn-donate-color, $grey);
-  font-size: $font-size-sm;
   line-height: 1.65;
   min-width: 180px;
   margin: 0;
