--- a/templates/blocks/author_profile.twig
+++ b/templates/blocks/author_profile.twig
@@ -12,11 +12,12 @@
 				{% endset %}
 
 				{% set author_bio_char_limit = 180 %}
+				{% set post_author_description = fn('get_the_author_meta', 'description', post.author.id) %}
 
-				{% if ( post.author.description|length > author_bio_char_limit ) %}
-					{% set author_bio = fn('substr', post.author.description, 0, fn('strpos', post.author.description ,' ', author_bio_char_limit)) ~ author_bio_readmore %}
+				{% if ( post_author_description|length > author_bio_char_limit ) %}
+					{% set author_bio = fn('substr', post_author_description, 0, fn('strpos', post_author_description ,' ', author_bio_char_limit)) ~ author_bio_readmore %}
 				{% else %}
-					{% set author_bio = post.author.description %}
+					{% set author_bio = post_author_description %}
 				{% endif %}
 
 				<p class="author-block-info-bio" itemprop="description">
