PLANET-5501 Remove btn-medium class

--- a/templates/blocks/header.twig
+++ b/templates/blocks/header.twig
@@ -66,7 +66,7 @@
 							{% if ( header_button_link_checkbox ) %}
 								target="_blank"
 							{% endif %}
-								class="btn btn-primary btn-medium page-header-btn"
+								class="btn btn-primary page-header-btn"
 								data-ga-category="Header"
 								data-ga-action="Call to Action"
 								data-ga-label="n/a">
