--- a/templates/tease-search.twig
+++ b/templates/tease-search.twig
@@ -117,7 +117,7 @@
 						{%  set link_text = settings['take_action_covers_button_text'] %}
 						<a
 							href="{{ post.link }}"
-							class="btn btn-primary btn-medium btn-small"
+							class="btn btn-primary btn-small"
 							data-ga-category="Search Results"
 							data-ga-action="Call to Action"
 							data-ga-label="{{ ga_page_type }}">
