--- a/templates/taxonomy.twig
+++ b/templates/taxonomy.twig
@@ -35,7 +35,7 @@
 						data-page="1"
 						data-total="{{ posts.pagination.total }}"
 						data-url="{{ fn('get_term_link', taxonomy.term_id ) }}"
-						class="load-more-mt btn btn-medium btn-small btn-secondary mb-5"
+						class="load-more-mt btn btn-small btn-secondary mb-5"
 						data-ga-category="Articles List"
 						data-ga-action="Load More Button"
 						data-ga-label="n/a">
