planet-5211 improve navigation and search accessibility

--- a/templates/base.twig
+++ b/templates/base.twig
@@ -6,7 +6,7 @@
 
 <body class="{{ body_class }} {{ custom_body_classes|default("") }}" data-nro="{{ site.link }}" data-post-type="{{ fn( 'get_post_type' ) }}">
 
-	<ul class="skip-links">
+	<ul class="skip-links" aria-hidden="true">
 		<li><a href="#header">{{ __( 'Skip to Navigation', 'planet4-master-theme' ) }}</a></li>
 		<li><a href="#content">{{ __( 'Skip to Content', 'planet4-master-theme' ) }}</a></li>
 		<li><a href="#footer">{{ __( 'Skip to Footer', 'planet4-master-theme' ) }}</a></li>
