--- a/templates/navigation-bar.twig
+++ b/templates/navigation-bar.twig
@@ -98,10 +98,11 @@
 		</button>
 		<form id="search_form" action="{{ data_nav_bar.home_url }}" class="form nav-item nav-search-wrap">
 			<input id="search_input" type="search" class="form-control" placeholder="{{ search_label }}"
-				   value="{{ data_nav_bar.search_query|e('wp_kses_post')|raw }}" name="s" aria-label="Search">
+				   value="{{ data_nav_bar.search_query|e('wp_kses_post')|raw }}" name="s" aria-label="{{ __( 'Search input', 'planet4-master-theme' ) }}">
 			<input id="orderby" type="hidden" name="orderby" value="{{ selected_sort ?? default_sort }}"/>
 			<button
 				class="top-nav-search-btn"
+				aria-label="{{ __( 'Press return/enter or click to search', 'planet4-master-theme' ) }}"
 				type="submit"
 				data-ga-category="Menu Navigation"
 				data-ga-action="Search"
