PLANET-5501 Update button markup example to match new styles

--- a/src/layout/_navbar.scss
+++ b/src/layout/_navbar.scss
@@ -40,7 +40,7 @@
 //     <a class="nav-link" href="#">ABOUT US</a>
 //   </li>
 //   <li class="nav-item">
-//     <a class="btn btn-donate" href="#">DONATE</a>
+//     <a class="btn btn-donate" href="#">Donate</a>
 //   </li>
 // </ul>
 // <button
