--- a/templates/cookies.twig
+++ b/templates/cookies.twig
@@ -3,6 +3,6 @@
 		<div>
 			{{ cookies.text|e('wp_kses_post')|raw }}
 		</div>
-		<button class="btn p-0" id="hidecookie">{{ __( 'Got it!', 'planet4-master-theme' ) }}</button>
+		<button class="btn btn-secondary p-0" id="hidecookie">{{ __( 'Got it!', 'planet4-master-theme' ) }}</button>
 	</div>
 {% endif %}
