--- a/admin/css/picker.css
+++ b/admin/css/picker.css
@@ -1,22 +1,32 @@
 /* Todo: Change to scss, separate styles that are essential to the ImagePicker component to work (if there are any)
      from ArchivePicker styles*/
 
-.archive-picker-search input[type=submit] {
-  display: inline-block;
+.archive-picker-search {
+  margin-top: 20px;
+}
+
+.archive-picker-search input {
+  margin-right: 10px;
 }
 
 .picker-list {
   max-width: 60%;
   max-height: 75vh;
   overflow-y: scroll;
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 0 10px;
+}
+
+@media (min-width: 768px) {
+  .picker-list {
+    grid-template-columns: repeat(3, 1fr);
+  }
 }
 
 .image-picker li {
-  display: inline-block !important;
+  display: inline-block;
   position: relative;
-  border: 2px solid transparent;
 }
 
 .image-picker li[data-wordpress-id]:after {
@@ -29,12 +39,16 @@
 }
 
 .image-picker li img {
-  margin: 2px 4px 0 0;
+  margin: 0;
+  border: 2px solid transparent;
+  box-sizing: border-box;
+  width: 100%;
+  object-fit: cover;
+  cursor: pointer;
 }
 
-li.picker-selected {
+.image-picker li img.picker-selected {
   border-color: yellow;
-  box-sizing: border-box;
 }
 
 .picker-sidebar-fields {
@@ -42,6 +56,7 @@ li.picker-selected {
   flex-direction: column;
   max-height: 100%;
   overflow: auto;
+  margin-top: 0;
 }
 
 .picker-sidebar-fields dd {
@@ -58,21 +73,26 @@ li.picker-selected {
   background: white;
   padding: 48px 8px 8px;
   border-left: 3px solid black;
+  overflow-y: auto;
   display: flex;
   flex-direction: column;
 }
 
-.picker-sidebar-single img {
+.picker-sidebar img {
   object-fit: cover;
   width: 100%;
+  margin-bottom: 10px;
+}
+
+.picker-sidebar-single .sidebar-action {
+  width: fit-content;
+  align-self: center;
+  margin-bottom: 10px;
 }
 
 .archive-picker-loading {
-  background: lightgrey;
-  border: 2px solid black;
-  border-radius: 4px;
   position: fixed;
-  bottom: 0;
-  padding: 5px;
-  left: 24%;
+  bottom: 20px;
+  text-align: center;
+  width: 50%;
 }
