--- a/templates/blocks/share_buttons.twig
+++ b/templates/blocks/share_buttons.twig
@@ -1,23 +1,30 @@
-<div class="share-buttons float-md-right">
+<div class="share-buttons">
+	<!-- Whatsapp -->
+	<a href="https://wa.me/?text={{ social.link }}"
+		 onclick="dataLayer.push({'event' : 'uaevent', 'eventCategory' : 'Social Share', 'eventAction': 'Whatsapp', 'eventLabel': '{{ social.link }}'});"
+		 target="_blank" class="share-btn whatsapp">
+		{{ 'whatsapp'|svgicon }}
+		<span class="sr-only">{{ __( 'Share on', 'planet4-master-theme' ) }} Whatsapp</span>
+	</a>
 	<!-- Facebook -->
-	<a href="https://www.facebook.com/sharer/sharer.php?u={{ post.link }}"
-		 onclick="dataLayer.push({'event' : 'uaevent', 'eventCategory' : 'Social Share', 'eventAction': 'Facebook', 'eventLabel': '{{ post.link }}'});"
+	<a href="https://www.facebook.com/sharer/sharer.php?u={{ social.link }}"
+		 onclick="dataLayer.push({'event' : 'uaevent', 'eventCategory' : 'Social Share', 'eventAction': 'Facebook', 'eventLabel': '{{ social.link }}'});"
 		 target="_blank" class="share-btn facebook">
-		<i class="fab fa-facebook-f"></i>
-		<span class="sr-only">{{ __( 'Share on' ) }} Facebook</span>
+		{{ 'facebook-f'|svgicon }}
+		<span class="sr-only">{{ __( 'Share on', 'planet4-master-theme' ) }} Facebook</span>
 	</a>
 	<!-- Twitter -->
-	<a href="https://twitter.com/share?url={{ post.link }}&text={{ post.title|raw }} via @{{ social_accounts.twitter }}&related={{ social_accounts.twitter }}"
-		 onclick="dataLayer.push({'event' : 'uaevent', 'eventCategory' : 'Social Share', 'eventAction': 'Twitter', 'eventLabel': '{{ post.link }}'});"
+	<a href="https://twitter.com/share?url={{ social.link }}&text={{ social.title|url_encode }}{% if social.description %} - {{ social.description|striptags }}{% endif %} via @{{ social_accounts.twitter }}&related={{ social_accounts.twitter }}"
+		 onclick="dataLayer.push({'event' : 'uaevent', 'eventCategory' : 'Social Share', 'eventAction': 'Twitter', 'eventLabel': '{{ social.link }}'});"
 		 target="_blank" class="share-btn twitter">
-		<i class="fab fa-twitter"></i>
-		<span class="sr-only">{{ __( 'Share on' ) }} Twitter</span>
+		{{ 'twitter'|svgicon }}
+		<span class="sr-only">{{ __( 'Share on', 'planet4-master-theme' ) }} Twitter</span>
 	</a>
 	<!-- Email -->
-	<a href="mailto:?subject={{ post.title }}&body={{ post.link }}"
-		 onclick="dataLayer.push({'event' : 'uaevent', 'eventCategory' : 'Social Share', 'eventAction': 'Email', 'eventLabel': '{{ post.link }}'});"
+	<a href="mailto:?subject={{ social.title|url_encode }}&body={% if social.description %}{{ social.description|striptags }} {% endif %}{{ social.link }}"
+		 onclick="dataLayer.push({'event' : 'uaevent', 'eventCategory' : 'Social Share', 'eventAction': 'Email', 'eventLabel': '{{ social.link }}'});"
 		 target="_blank" class="share-btn email">
-		<i class="fas fa-envelope"></i>
-		<span class="sr-only">{{ __( 'Share via' ) }} Email</span>
+		{{ 'envelope'|svgicon }}
+		<span class="sr-only">{{ __( 'Share via', 'planet4-master-theme' ) }} Email</span>
 	</a>
 </div>
