--- a/templates/footer.twig
+++ b/templates/footer.twig
@@ -63,10 +63,10 @@
 			{% endfor %}
 		</ul>
 
-		<p class="copyright-text col-md-8">
+		<p class="copyright-text col-md-8" role="text">
 			{{ copyright_text_line1|e('wp_kses_post')|raw }}
 		</p>
-		<p class="gp-year">
+		<p class="gp-year" role="text">
 			{{ 'creative-commons'|svgicon }}
 			{{ copyright_text_line2|e('wp_kses_post')|raw }} {{"now"|date('Y')}}
 		</p>
