--- a/templates/footer_min.twig
+++ b/templates/footer_min.twig
@@ -31,11 +31,11 @@
 			{% endif %}
 		</ul>
 
-		<div class="copyright-text col-md-8">
+		<div class="copyright-text col-md-8" role="text">
 			{{ copyright_text_line1|e('wp_kses_post')|raw }}
 		</div>
 
-		<p class="gp-year">
+		<p class="gp-year" role="text">
 			{{ 'creative-commons'|svgicon }}
 			{{ copyright_text_line2|e('wp_kses_post')|raw }} {{"now"|date('Y')}}
 		</p>
