--- a/assets/src/scss/pages/search/_search-bar.scss
+++ b/assets/src/scss/pages/search/_search-bar.scss
@@ -25,9 +25,25 @@
     font-size: $font-size-sm;
     line-height: 2.75;
 
+    svg {
+      margin-right: 4px;
+      vertical-align: baseline;
+    }
+
+    // We need this margin exception for tablets because otherwise the button moves to 2 lines.
+    @include medium-and-up {
+      svg {
+        margin-right: 0;
+      }
+    }
+
     @include large-and-up {
       margin-top: 2px;
       line-height: 3;
+
+      svg {
+        margin-right: 4px;
+      }
     }
 
     i {
