--- a/assets/src/styles/blocks/Gallery_content_three_column.scss
+++ b/assets/src/styles/blocks/Gallery_content_three_column.scss
@@ -25,7 +25,7 @@
       position: relative;
       left: -35%;
       max-width: inherit;
-      object-fit: none;
+      object-fit: cover;
 
       @include mobile-only {
         width: 200px;
