PLANET-5644 Update button default texts

--- a/templates/blocks/content_covers.twig
+++ b/templates/blocks/content_covers.twig
@@ -67,7 +67,7 @@
 					<div class="row load-more-posts-button-div" style="display: none;">
 						<div class="col-md-12 col-lg-5 col-xl-5">
 							<button class="btn btn-block btn-secondary btn-load-more-posts-click">
-								{{ __( 'Load More', 'planet4-blocks' ) }}
+								{{ __( 'Load more', 'planet4-blocks' ) }}
 							</button>
 						</div>
 					</div>
@@ -75,7 +75,7 @@
 					<div class="row load-more-posts-button-div">
 						<div class="col-md-12 col-lg-5 col-xl-5">
 							<button class="btn btn-block btn-secondary btn-load-more-posts-click">
-								{{ __( 'Load More', 'planet4-blocks' ) }}
+								{{ __( 'Load more', 'planet4-blocks' ) }}
 							</button>
 						</div>
 					</div>
