--- a/templates/blocks/campaign_covers.twig
+++ b/templates/blocks/campaign_covers.twig
@@ -50,7 +50,7 @@
 						<div class="row">
 							<div class="col-md-12 col-lg-5 col-xl-5 mt-3 load-more-campaigns-button-div">
 								<button class="btn btn-block btn-secondary btn-load-more-campaigns-click">
-									{{ __( 'Load More', 'planet4-blocks' ) }}
+									{{ __( 'Load more', 'planet4-blocks' ) }}
 								</button>
 							</div>
 						</div>
