PLANET-5644 Update button default texts

--- a/templates/search.twig
+++ b/templates/search.twig
@@ -198,7 +198,7 @@
 										</div>
 										<div class="btnact">
 											<button type="button" class="btn btn-action btn-small cancelbtn" data-dismiss="modal">{{ __( 'Cancel', 'planet4-master-theme' ) }}</button>
-											<button type="button" class="btn btn-primary btn-small applybtn">{{ __( 'Apply Filters', 'planet4-master-theme' ) }}</button>
+											<button type="button" class="btn btn-primary btn-small applybtn">{{ __( 'Apply filters', 'planet4-master-theme' ) }}</button>
 										</div>
 									</div>
 								</div>
@@ -217,7 +217,7 @@
 												</button>
 											{% endfor %}
 										{% endfor %}
-										<button class="clearall">{{ __( 'Clear All', 'planet4-master-theme' ) }} <i class="icon-cross"></i></button>
+										<button class="clearall">{{ __( 'Clear all', 'planet4-master-theme' ) }} <i class="icon-cross"></i></button>
 									</div>
 								</div>
 							{% endif %}
