--- a/templates/tease-search.twig
+++ b/templates/tease-search.twig
@@ -121,7 +121,7 @@
 							data-ga-category="Search Results"
 							data-ga-action="Call to Action"
 							data-ga-label="{{ ga_page_type }}">
-								{{ link_text ?: __( 'take action', 'planet4-master-theme' ) }}
+								{{ link_text ?: __( 'Take action', 'planet4-master-theme' ) }}
 						</a>
 					{% elseif ( is_document ) %}
 						<a href="{{ fn('wp_get_attachment_url', post.id) }}" download class="btn btn-small btn-secondary">
