--- a/templates/comment_form/author_field.twig
+++ b/templates/comment_form/author_field.twig
@@ -1,5 +1,4 @@
 <div class="form-group">
-	<label for="comments-name-input">{{ __( 'Name', 'planet4-master-theme' )  }} *</label>
-	{% set your_name = __( 'Your Name', 'planet4-master-theme' ) %}
-	<input type="text" class="form-control" id="author" name="author" placeholder="{{ your_name }}" required />
+	<label for="comments-name-input">{{ __( 'Your Name', 'planet4-master-theme' )  }} *</label>
+	<input type="text" class="form-control" id="author" name="author" required />
 </div>
