--- a/assets/src/scss/pages/post/_comments-form.scss
+++ b/assets/src/scss/pages/post/_comments-form.scss
@@ -1,108 +1,68 @@
 .comment-form {
   display: block;
-  padding-bottom: 60px;
-  border-bottom: 1px solid $grey-40;
+  padding-bottom: 32px;
+
+  @include medium-and-up {
+    padding-bottom: 56px;
+  }
+
+  .form-submit {
+    margin-bottom: 0;
+  }
 
   .form-group {
-    margin-bottom: 32px;
-
-    @include small-and-up {
-      margin-bottom: 32px;
-    }
-
-    @include medium-and-up {
-      padding-bottom: 40px;
-    }
+    position: relative;
   }
 
   input,
   textarea {
     font-size: $font-size-xs;
-    font-weight: 300;
+    padding: 16px;
+    margin-bottom: 32px;
+    font-weight: normal;
     border-radius: 0;
-    border: none;
-    transition: background-color 150ms linear;
+    border: solid 1px $grey-40;
+    background-color: $white;
 
     @include large-and-up {
       font-size: $font-size-sm;
     }
-
-    &:focus {
-      background-color: transparentize($white, .6);
-    }
-
-    &::placeholder {
-      color: $grey-80;
-    }
-
-    &::-webkit-input-placeholder {
-      color: $grey-80;
-    }
-
-    &::-ms-input-placeholder {
-      color: $grey-80;
-    }
-  }
-
-  label {
-    font-size: $font-size-sm;
-    font-weight: 500;
-  }
-
-  label[for=comments-textarea] {
-    display: none;
   }
 
   textarea {
-    background-color: $comment-text;
-    padding: 13px;
-    margin-bottom: 20px;
+    resize: none;
+  }
 
-    @include small-and-up {
-      margin-bottom: 56px;
-    }
-
-    @include medium-and-up {
-      margin-bottom: 40px;
-      font-size: $font-size-sm;
-    }
+  label {
+    position: absolute;
+    margin: 0;
+    font-size: $font-size-xxs;
+    font-weight: bold;
+    margin-top: -10px;
+    margin-left: 16px;
+    background-color: white;
+    padding: 0 6px;
 
     @include large-and-up {
-      margin-bottom: 30px;
+      padding: 0 8px;
+      font-size: $font-size-xs;
     }
   }
 
   input {
-    border-bottom: 1px solid $black;
-    background-color: transparent;
-    padding: 7px $n5 $n5;
     width: 100%;
-
-    &:focus {
-      border-bottom-color: $grey-60;
-    }
 
     @include medium-and-up {
       width: 50%;
-    }
-
-    @include medium-and-up {
-      width: 80%;
     }
   }
 
   button {
     width: 100%;
-    margin-top: 60px;
-
-    @include medium-and-up {
-      width: 50%;
-      margin-top: 30px;
-    }
+    margin: 0;
 
     @include large-and-up {
-      width: 40%;
-      margin-top: 30px;
+      width: 220px;
     }
   }
 }
