--- a/assets/src/scss/style.scss
+++ b/assets/src/scss/style.scss
@@ -75,8 +75,8 @@ Text Domain: planet4-master-theme
 @import "vendors/fontawesome";
 @import "vendors/usabilla";
 @import "vendors/gtm";
-@import "vendors/photoswipe/main";
-@import "vendors/photoswipe/planet4-photoswipe";
+// @import "vendors/photoswipe/main";
+// @import "vendors/photoswipe/planet4-photoswipe";
 
 // Campaign overrides
 @import "campaigns/campaign_cookies";
