--- a/assets/src/scss/pages/search/_search-bar.scss
+++ b/assets/src/scss/pages/search/_search-bar.scss
@@ -3,6 +3,7 @@
   background: transparentize($white, .7);
   border: 1px solid $faded-jade;
   padding: 24px 15px;
+  border-radius: 4px;
 
   @include small-and-up {
     padding: 32px;
