--- a/admin/css/login.css
+++ b/admin/css/login.css
@@ -51,14 +51,21 @@ body.login #login_error, body.login .message, body.login .success {
 }
 
 body.login div#login form#loginform p.submit input#wp-submit {
-  background: #f36d3a;
-  box-shadow: none;
+  background: #f36b35;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, .25);
   text-shadow: none;
-  text-transform: uppercase;
   height: auto;
   border: none;
   color: white;
   padding: 0.5em 40px;
   line-height: 1;
-  border-radius: 0;
+  border-radius: 4px;
+}
+
+body.login div#login form#loginform p.submit input#wp-submit:hover {
+  background: #ee562d;
+}
+
+body.login div#login form#loginform p.submit input#wp-submit:active {
+  background: #dd4a22;
 }
