--- a/assets/src/styles/blocks/Happypoint.scss
+++ b/assets/src/styles/blocks/Happypoint.scss
@@ -150,7 +150,7 @@
   form {
     input, .custom-select {
       height: 42px;
-      border-radius: 0;
+      border-radius: 4px;
       border-color: transparent;
       margin-bottom: 16px;
 
