PLANET-4861 Adjust search sorting options

--- a/templates/search.twig
+++ b/templates/search.twig
@@ -341,12 +341,12 @@
 										name="select_order"
 										data-ga-category="Search Page"
 										data-ga-action="Sort By Filter"
-										data-ga-label="{{ ( selected_sort == '_score' ) ? 'Most Recent' : 'Most Relevant' }}">
+										data-ga-label="{% if selected_sort == '_score' %}Most Relevant{% elseif selected_sort == 'post_date' %}Newest{% else %}Oldest{% endif %}">
 									{% for key, sort_option in sort_options %}
 										{% if key == selected_sort %}
 											<option value="{{ key }}" {{ not search_query and key == '_score' ? 'disabled' : 'selected' }}>{{ __( sort_option.name, 'planet4-master-theme' ) }}</option>
 										{% else %}
-											<option value="{{ key }}">{{ __( sort_option.name, 'planet4-master-theme' ) }}</option>
+											<option value="{{ key }}" {{ not search_query and key == '_score' ? 'disabled' : '' }}>{{ __( sort_option.name, 'planet4-master-theme' ) }}</option>
 										{% endif %}
 									{% endfor %}
 								</select>
