--- a/assets/src/styles/blocks/Covers/TakeActionBoxoutBottom.scss
+++ b/assets/src/styles/blocks/Covers/TakeActionBoxoutBottom.scss
@@ -9,6 +9,8 @@
   box-shadow: 0 4px 3px rgba(0, 0, 0, 0.16);
   transition: box-shadow 0.2s;
   border-radius: 4px;
+  margin-right: 0;
+  margin-left: 0;
 
   &:hover {
     box-shadow: 0 5px 5px rgba(0, 0, 0, 0.3);
@@ -23,7 +25,15 @@
     object-fit: cover;
     border-top-left-radius: 4px;
     border-bottom-left-radius: 4px;
-    margin-right: 16px;
+    margin-inline-end: 16px;
+
+    html[dir="rtl"] & {
+      float: right;
+      border-top-right-radius: 4px;
+      border-bottom-right-radius: 4px;
+      border-top-left-radius: 0;
+      border-bottom-left-radius: 0;
+    }
   }
 
   .cover-card-content {
@@ -41,6 +51,11 @@
     margin-top: -60px;
     position: absolute;
     left: 0;
+
+    html[dir="rtl"] & {
+      right: 0;
+      left: auto;
+    }
   }
 
   .cover-card-tag,
@@ -78,6 +93,11 @@
     color: $white;
     border: none;
 
+    html[dir="rtl"] & {
+      right: auto;
+      left: 16px;
+    }
+
     &:hover,
     &:focus {
       background-color: $orange-hover;
@@ -92,6 +112,10 @@
     min-height: 200px;
     margin-top: 100px !important;
     float: none;
+
+    html[dir="rtl"] & {
+      float: none;
+    }
 
     .cover-card-heading {
       margin-bottom: 10px;
@@ -120,8 +144,6 @@
     }
 
     .btn {
-      bottom: 16px;
-      right: 16px;
       font-size: 14px;
     }
 
