--- a/assets/src/styles/blocks/Covers/TakeActionBoxoutScroll.scss
+++ b/assets/src/styles/blocks/Covers/TakeActionBoxoutScroll.scss
@@ -10,6 +10,7 @@
   display: none;
   padding: 12px;
   height: 136px;
+  z-index: 1;
 
   &.hidden {
     display: none !important;
@@ -26,6 +27,15 @@
     top: 4px;
     line-height: 1;
     font-size: 24px;
+
+    &:hover {
+      color: $grey-60;
+    }
+
+    html[dir="rtl"] & {
+      right: auto;
+      left: 12px;
+    }
   }
 
   img {
@@ -35,7 +45,11 @@
     pointer-events: none;
     float: left;
     object-fit: cover;
-    margin-right: 12px;
+    margin-inline-end: 12px;
+
+    html[dir="rtl"] & {
+      float: right;
+    }
   }
 
   .cover-card-more {
@@ -80,11 +94,16 @@
     background-color: $orange;
     color: $white;
     border: none;
+
+    html[dir="rtl"] & {
+      left: 12px;
+      right: auto;
+    }
   }
 
   @include medium-and-up {
     min-height: 136px;
-    
+
     &:hover,
     &:active {
       .cover-card-excerpt {
@@ -114,7 +133,6 @@
   @include large-and-up {
     float: none;
     display: none;
-    position: fixed;
     margin: 0;
     right: auto;
     bottom: calc((100vh - 360px) / 2); // We want the card to be vertically centered
@@ -126,6 +144,10 @@
     padding: 0;
     border-radius: 4px;
 
+    html[dir="rtl"] & {
+      float: none;
+    }
+
     &:hover {
       box-shadow: 0 5px 5px rgba(0, 0, 0, 0.3);
     }
@@ -133,6 +155,10 @@
     .btn {
       right: 24px;
       bottom: 24px;
+
+      html[dir="rtl"] & {
+        left: 24px;
+      }
     }
 
     .cover-card-heading {
@@ -148,9 +174,13 @@
       height: 145px;
       width: 100%;
       float: none;
-      margin-right: 0;
+      margin-inline-end: 0;
       border-top-left-radius: 4px;
       border-top-right-radius: 4px;
+
+      html[dir="rtl"] & {
+        float: none;
+      }
     }
 
     .cover-card-more {
@@ -160,6 +190,10 @@
       left: 0;
       font-size: 28px;
       color: $black;
+
+      html[dir="rtl"] & {
+        right: 0;
+      }
     }
 
     .not-now {
