--- a/templates/html-header.twig
+++ b/templates/html-header.twig
@@ -2,7 +2,16 @@
 <html {{ fn('language_attributes', 'html') }}>
 <head>
 	<meta charset="{{ site.charset }}">
-	<title>{% if wp_title %}{{ wp_title|e('esc_html')|raw }} - {{ site.name }}{% else %}{{ site.name }}{% endif %}</title>
+	<title>
+		{% if post.password_required %}
+			{{ site.name }}
+			{% set post_tags = '' %}
+		{% elseif wp_title %}
+			{{ wp_title|e('esc_html')|raw }} - {{ site.name }}
+		{% else %}
+			{{ site.name }}
+		{% endif %}
+	</title>
 
 	{% include 'blocks/meta_fields.twig' %}
 
@@ -30,23 +39,25 @@
 				{'{{ google_tag_value }}':true});
 			}
 
-			var cf_campaign_name = '{% if cf_campaign_name is defined and cf_campaign_name is not null %}{{ cf_campaign_name|raw }}{% endif %}';
-			var cf_project_id    = '{% if cf_project_id is defined and cf_project_id is not null %}{{ cf_project_id|raw }}{% endif %}';
-			var cf_local_project = '{% if cf_local_project is defined and cf_local_project is not null %}{{ cf_local_project|raw }}{% endif %}';
-			var cf_basket_name   = '{% if cf_basket_name is defined and cf_basket_name is not null %}{{ cf_basket_name|raw }}{% endif %}';
-			var cf_scope         = '{% if cf_scope is defined and cf_scope is not null %}{{ cf_scope|raw }}{% endif %}';
-			var cf_department    = '{% if cf_department is defined and cf_department is not null %}{{ cf_department|raw }}{% endif %}';
+			{% if not post.password_required %}
+				var cf_campaign_name = '{% if cf_campaign_name is defined and cf_campaign_name is not null %}{{ cf_campaign_name|raw }}{% endif %}';
+				var cf_project_id    = '{% if cf_project_id is defined and cf_project_id is not null %}{{ cf_project_id|raw }}{% endif %}';
+				var cf_local_project = '{% if cf_local_project is defined and cf_local_project is not null %}{{ cf_local_project|raw }}{% endif %}';
+				var cf_basket_name   = '{% if cf_basket_name is defined and cf_basket_name is not null %}{{ cf_basket_name|raw }}{% endif %}';
+				var cf_scope         = '{% if cf_scope is defined and cf_scope is not null %}{{ cf_scope|raw }}{% endif %}';
+				var cf_department    = '{% if cf_department is defined and cf_department is not null %}{{ cf_department|raw }}{% endif %}';
 
-			if ( cf_campaign_name || cf_basket_name || cf_scope || cf_department ) {
-				dataLayer.push({
-					'gCampaign' : cf_campaign_name,
-					'gLocalProject' : cf_local_project,
-					'projectID' : cf_project_id,
-					'gBasket' : cf_basket_name,
-					'gScope': cf_scope,
-					'gDepartment': cf_department,
-				});
-			}
+				if ( cf_campaign_name || cf_basket_name || cf_scope || cf_department ) {
+					dataLayer.push({
+						'gCampaign' : cf_campaign_name,
+						'gLocalProject' : cf_local_project,
+						'projectID' : cf_project_id,
+						'gBasket' : cf_basket_name,
+						'gScope': cf_scope,
+						'gDepartment': cf_department,
+					});
+				}
+			{% endif %}
 
 			var cookie_consent = document.cookie.split(';').filter(function(c) {return c.indexOf('greenpeace=2') >= 0}).length;
 			var enforce_cookies_policy = '{{ enforce_cookies_policy }}';
