--- a/templates/single-page.twig
+++ b/templates/single-page.twig
@@ -1,11 +1,15 @@
 {% extends "base.twig" %}
 
 {% block content %}
+	<div class="page-header">
+		<div class="page-header-background"></div>
+	</div>
+
 	<div class="page-template">
 
 		<form id="password-form" class="mb-5" action="{{login_url}}?action=postpass" method="post">
 			<div class="form-group">
-				<label for="pwbox-{{post.ID}}">{{ __( 'Password', 'planet4-master-theme' ) }}:</label>
+				<label for="pwbox-{{post.ID}}"><h6>{{ __( 'To see the content of this page, please enter your password  below', 'planet4-master-theme' ) }}</h6></label>
 				<input class="form-control" name="post_password" id="pwbox-{{post.ID}}" type="password" size="20" maxlength="20">
 			</div>
 			<button class="btn btn-primary" type="submit">{{ __( 'Submit', 'planet4-master-theme' ) }}</button>
