PLANET-5466 Update optional button functionality

--- a/assets/src/styles/editorStyle.scss
+++ b/assets/src/styles/editorStyle.scss
@@ -30,6 +30,7 @@
 @import "blocks/SplitTwoColumnsEditor";
 @import "blocks/SubmenuEditor";
 @import "blocks/HappypointEditor";
+@import "blocks/AccordionEditor.scss";
 
 @import "components/LayoutSelector";
 @import "components/EmptyMessage";
