--- a/templates/search.twig
+++ b/templates/search.twig
@@ -337,6 +337,7 @@
 								<label class="mr-sm-2" for="select_order">{{ __('Sort by', 'planet4-master-theme' ) }}</label>
 								<select
 										id="select_order"
+										class="form-control"
 										name="select_order"
 										data-ga-category="Search Page"
 										data-ga-action="Sort By Filter"
