PLANET-5373: Replace jQuery usage from author.js
Ref: https://jira.greenpeace.org/browse/PLANET-5753
Ref: https://jira.greenpeace.org/browse/PLANET-5663

`author.js` script is used to change the appearance of a link when hovering a related image.
We can replace this by a CSS rule.

--- a/assets/src/scss/pages/search/_search-results.scss
+++ b/assets/src/scss/pages/search/_search-results.scss
@@ -29,10 +29,6 @@
       border-bottom: 1px solid $grey-20;
       position: relative;
 
-      .search-hover {
-        text-decoration: underline;
-      }
-
       .search-result-item-image,
       .blank-block {
         width: 0;
@@ -60,6 +56,10 @@
         @include small-and-up {
           width: max-content;
         }
+      }
+
+      .search-result-item-image:hover ~ * .search-result-item-headline {
+        text-decoration: underline;
       }
     }
   }
